full bleed fixes

--- a/src/assets/stylesheets/_themes.scss
+++ b/src/assets/stylesheets/_themes.scss
@@ -95,7 +95,7 @@
 .cloud-infrastructures-hero-right-stripe2 { display: none; }
 .cloud-infrastructures-hero-right-pattern { background-image:url(http://redhatbrand.github.io/RedHatPatterns/positioned-patterns/cloud-infrastructure/blue/positioned-12-12-50.svg); }
 .cloud-infrastructures-hero-left-stripe { background-image:url(http://redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/blue/grid-00-00.svg); }
-.cloud-infrastructures-hero-left-pattern { background-image:url(http://redhatbrand.github.io/RedHatPatterns/positioned-patterns/cloud-infrastructure/blue/positioned-00-00-50.svg); }\
+.cloud-infrastructures-hero-left-pattern { background-image:url(http://redhatbrand.github.io/RedHatPatterns/positioned-patterns/cloud-infrastructure/blue/positioned-00-00-50.svg); }
 .cloud-infrastructures-hero-full-stripe { background-color: #0088CE;}
 .cloud-infrastructures-hero-full-pattern { background-image:url(http://redhatbrand.github.io/RedHatPatterns/positioned-patterns/cloud-infrastructure/blue/positioned-08-04-alt-50.svg); }
 // infrastructure-management
@@ -140,8 +140,8 @@
 .business-process-integration-hero-right-pattern { background-image:url(http://redhatbrand.github.io/RedHatPatterns/positioned-patterns/business-process/green-mid/positioned-12-12-50.svg); }
 .business-process-integration-hero-left-stripe { background-image:url(http://redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/green-mid/grid-00-00.svg); }
 .business-process-integration-hero-left-pattern { background-image:url(http://redhatbrand.github.io/RedHatPatterns/positioned-patterns/business-process/green-mid/positioned-00-00-50.svg); }
-.business-process-intergraion-hero-full-stripe { background-color: #3F9C35;}
-.business-process-intergraion-hero-full-pattern { background-image:url(http://redhatbrand.github.io/RedHatPatterns/positioned-patterns/business-process/green-mid/positioned-08-04-alt-50.svg); }
+.business-process-integraion-hero-full-stripe { background-color: #3F9C35;}
+.business-process-integraion-hero-full-pattern { background-image:url(http://redhatbrand.github.io/RedHatPatterns/positioned-patterns/business-process/green-mid/positioned-08-04-alt-50.svg); }
 // cloud-app-development
 
 .cloud-app-development, .cloud-app-development-links a {color: #3F9C35 !important;}
@@ -154,5 +154,5 @@
 .cloud-app-development-hero-right-pattern { background-image:url(http://redhatbrand.github.io/RedHatPatterns/positioned-patterns/cloud-dev/green-mid/positioned-12-12-50.svg); }
 .cloud-app-development-hero-left-stripe { background-image:url(http://redhatbrand.github.io/RedHatTemplates/global-assets/images/shapes/green-mid/grid-00-00.svg); }
 .cloud-app-development-hero-left-pattern { background-image:url(http://redhatbrand.github.io/RedHatPatterns/positioned-patterns/cloud-dev/green-mid/positioned-00-00-50.svg); }
-.clour-app-development-hero-full-stripe { background-color: #3F9C35;}
+.cloud-app-development-hero-full-stripe { background-color: #3F9C35;}
 .cloud-app-development-hero-full-pattern { background-image:url(http://redhatbrand.github.io/RedHatPatterns/positioned-patterns/cloud-dev/green-mid/positioned-08-04-alt-50.svg); }
